*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 0.5.1 ===
* Added DynamicDelay DSP processing unit.
* Fixed latency computation error for FIR and FFT modes of the filter.
* Optimized FIR and FFT dspu::Equalizer modes to use dsp::fastconv_ routines instead of FFT.
* Added SPM (Spectral Processing Module) mode to dspu::Equalizer module.

=== 0.5.0 ===
* Initial release.
