@@ -7,6 +7,7 @@
 * Fixed latency computation error for FIR and FFT modes of the filter.
 * Optimized FIR and FFT dspu::Equalizer modes to use dsp::fastconv_ routines instead of FFT.
 * Added SPM (Spectral Processing Module) mode to dspu::Equalizer module.
+* Updated interface of dspu::Analyzer module, fixed inter-channel out-of-sync issue.
 
 === 0.5.0 ===
 * Initial release.
